# myAgileKit

./: .gitignore  README.md  iniciar.sh  myagilekit_gui.py  project_paths.py  pyproject.toml  requirements.txt  tool_registry.py  video_info.json
DevTools/: main.py
KitDoMalandro/: erroChato.py  file_fusor.py  file_modifier_app.py  interface_limpador.py  juntarArquivos.py  limpa_limpa_limpa-docstring.py  limpar_citacoes.py
OSTools/: corrigir_virtualbox_paths.sh  vericar controle.py  windows-update-menu.bat  windows-update-menu.ps1
audioExtract/: conversor_ffmpeg_pro.py
config/: myagilekit.toml
docs/: README.md  arquitetura.md  desenvolvimento.md  ferramentas.md  instalacao.md  plano_estado_da_arte.md  troubleshooting.md
editor_tools/: __init__.py  check_operational_regression.py  pipeline_runner.py  run_incremental_ruff.py  run_smoke_suite.py  vscode_folder_style.py  vscode_folder_style.sh
fileFusor/: file_fusor.py  file_modifier_app.py  limparPythonWindow.bat
instalacao/: instalador_tk.py  instalar.sh
myagilekit/: __init__.py
sega saturn/: instalar deathTank.sh  kronos_saturn.sh  mednafen_saturn.sh  origens_bios.txt  origens_cds.txt  ymir.sh
tests/: __init__.py  helpers.py  test_audio_converter_logic.py  test_core_paths.py  test_devtools_logic.py  test_installer_cli.py  test_installer_modes.py  test_packaging_config.py  test_project_integrity.py  test_tool_registry.py  test_vscode_folder_style.py  test_youtube_service_logic.py
visual studio code/: __init__.py  check_operational_regression.py  pipeline_runner.py  run_incremental_ruff.py  (+3 more)
(+36 files in other folders)
